saturn-program-macros/tests/compile_fail/unknown_attribute_key.stderr
error: unknown attribute key; expected `btc_tx_cfg`
  --> tests/compile_fail/unknown_attribute_key.rs:10:18
   |
10 | #[saturn_program(foo = 1)]
   |                  ^^^^^^^
